2010-08-30 Michel Georgy <michel-at-4eyes.ch>
	* Reviewed code
	* fixed possible sql injections
	* Added javadoc comments

2010-08-30 Markus Stauffiger <markus-at-4eyes.ch>
    * Added manual.swx
	* Updated typoscript files
	* Removed some unnecessary files
	* A little code clean up

2010-08-29 Markus Stauffiger <markus-at-4eyes.ch>
    * Removed deactivated code
	* Added phpdoc documentation
	* Added x4epersdb dependency

2010-08-29 Markus Stauffiger <markus-at-4eyes.ch>
    * Merged x4euniprojects and x4euniprojectsgeneral

2010-08-29 Markus Stauffiger <markus-at-4eyes.ch>
    * Initial forge upload
    * Deleted some unnecessary files

05-09-29 Andi Keller  <andi-at-4eyes.ch>
	* Initial release