@@ -1,13 +1,4 @@
-1: => Name, tel and email
-<!-- ###view_0### begin -->
-	<p>
-	<strong>###linkStart###<!-- ###firstname_box### -->###firstname###<!-- ###firstname_box### --> <!-- ###lastname_box### -->###lastname###<!-- ###lastname_box### -->###linkEnd###</strong>
-		<!-- ###office_phone_box###--><br />###listFieldHeader_office_phone### ###office_phone###<!-- ###office_phone_box###-->
-		<!-- ###email_box### --><br />###email###<!-- ###email_box### -->
-	</p>
-<!-- ###view_0### end -->
-
-2: => name, office adress, tel, email
+1: => name, office adress, tel, email
 <!-- ###view_1### begin -->
 	<p>
 	<strong>###linkStart###<!-- ###title_box### -->###title###<!-- ###title_box### --> <!-- ###firstname_box### -->###firstname###<!-- ###firstname_box### --> <!-- ###lastname_box### -->###lastname###<!-- ###lastname_box### --><!-- ###title_after_box### -->, ###title_after###<!-- ###title_after_box### -->###linkEnd###</strong>
@@ -19,45 +10,3 @@
 		<!-- ###email_box### --><br />###email###<!-- ###email_box### -->
 	</p>
 <!-- ###view_1### end -->
-
-3: => Alternating list with title
-<!-- ###view_2### begin -->
-	<!-- ###even### begin -->
-	<p class="even">
-		<strong>###linkStart###<!-- ###title_box### -->###title###<!-- ###title_box### --> <!-- ###firstname_box### -->###firstname###<!-- ###firstname_box### --> <!-- ###lastname_box### -->###lastname###<!-- ###lastname_box### --><!-- ###title_after_box### -->, ###title_after###<!-- ###title_after_box### -->###linkEnd###</strong>
-		<!-- ###function_suffix_box###--><br />###function_suffix###<!-- ###function_suffix_box###-->
-	</p>
-	<!-- ###even### end -->
-	<!-- ###odd### begin -->
-	<p class="odd">
-		<strong>###linkStart###<!-- ###title_box### -->###title###<!-- ###title_box### --> <!-- ###firstname_box### -->###firstname###<!-- ###firstname_box### --> <!-- ###lastname_box### -->###lastname###<!-- ###lastname_box### --><!-- ###title_after_box### -->, ###title_after###<!-- ###title_after_box### -->###linkEnd###</strong>
-		<!-- ###function_suffix_box###--><br />###function_suffix###<!-- ###function_suffix_box###-->
-	</p>
-	<!-- ###odd### end -->
-<!-- ###view_2### end -->
-
-4: => Alternating list
-<!-- ###view_3### begin -->
-	<!-- ###even### begin -->
-	<p class="even">
-		<strong>###linkStart###<!-- ###firstname_box### -->###firstname###<!-- ###firstname_box### --> <!-- ###lastname_box### -->###lastname###<!-- ###lastname_box### -->###linkEnd###</strong>
-		<!-- ###function_suffix_box###--><br />###function_suffix###<!-- ###function_suffix_box###-->
-	</p>
-	<!-- ###even### end -->
-	<!-- ###odd### begin -->
-	<p class="odd">
-		<strong>###linkStart###<!-- ###firstname_box### -->###firstname###<!-- ###firstname_box### --> <!-- ###lastname_box### -->###lastname###<!-- ###lastname_box### -->###linkEnd###</strong>
-		<!-- ###function_suffix_box###--><br />###function_suffix###<!-- ###function_suffix_box###-->
-	</p>
-	<!-- ###odd### end -->
-<!-- ###view_3### end -->
-
-5: => Link to all lectures
-<!-- ###view_4### -->
-<p><a href="###link###" target="_blank">###linkText###</a></p>
-<!-- ###view_4### -->
-
-6: => Link to current lectures
-<!-- ###view_5###-->
-<p><a href="###link###" target="_blank">###linkText###</a></p>
-<!-- ###view_5### -->
