@@ -1,5 +1,4 @@
 <!-- ###searchBox### begin -->
-
 <form action="###formAction###" method="post">
 <p>	<input type="hidden" name="no_cache" value="1" />
 	<input type="hidden" name="tx_x4euniprojectsgeneral_pi1[pointer]" value="" />
@@ -9,15 +8,9 @@
 <!-- ###searchBox### end -->
 
 
-
-
-
 <!-- ###listPersonel### begin -->
-
 <h1>###title###</h1>
-
 <table class="tablelist" border="0" cellpadding="0" cellspacing="0" width="100%">
-	
 <!-- ###rowSet### begin -->
 <tr class="function-title"><th colspan="###span###"><h2>###header###</h2></th></tr>
 	<!-- ###headRow### begin -->
@@ -47,16 +40,11 @@
 	<!-- ###rows### end -->
 	<tr class="function-title"><th colspan="###span###">&nbsp;</th></tr>
 <!-- ###rowSet### end -->
-
 </table>
-
 <!-- ###listPersonel### end -->
 
 
-
-
 <!-- ###list### begin -->
-
 <table class="tablelist" border="0" cellpadding="0" cellspacing="0" width="100%">
 	<!-- ###headRow### begin -->
 	<tr class="tableheader">
@@ -84,5 +72,4 @@
 		<!-- ###row1### end -->
 	<!-- ###rows### end -->
 </table>
-
 <!-- ###list### end -->
