@@ -1,5 +1,4 @@
 <!-- ###listByCategory### -->
-	
 	###header###
 	<p>###pagebrowser###</p>
 	<table class="tablelist" border="0" cellpadding="0" cellspacing="0" width="100%">
