@@ -1,10 +1,0 @@
-<!-- ###row### begin -->
-
-<td class="row">
-	
-###content###
-	
-</td>
-
-
-<!-- ###row### end -->
